[package]
name = "wrk-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
parking_lot = "0.12"
hdrhistogram = "7.5"
num_cpus = "1.16"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
